# FirstCourseUniversityProjects

./: RND.cpp  RND.hpp  Random number.hpp  Untitled Diagram.drawio  obj.cpp  графік енергії.txt  графік енергії.xlsx
Black and white/: Black and white 3.cbp  Black and white 3.depend  Black and white 3.layout  BlackAndWhite1.html  loopSearch1.hpp  main.cpp
CLL/: CLA.cpp  CLA.h  CMakeLists.txt  Command.cpp  Command.h  History.cpp  History.h
MonteCarlo/: New Microsoft Excel Worksheet.xlsx  loopSearch1.cpp  loopSearch1.hpp  main.cpp  график зависимости точности.txt
MonteCarlo1/: BlackAndWhite2.html  MonteCarlo1.cbp  MonteCarlo1.depend  New Microsoft Excel Worksheet.xlsx  Rnd.cpp  Rnd.hpp  main.cpp  графік енергії.txt
SpectrumFunctionWithN-FibRandomGeneration/: Generator.cpp  Generator.h  README.md  Virtual.cpp  Virtual.h  main.cpp  universalspectrumlibraryOOP.cpp  universalspectrumlibraryOOP.h
Unifersal spectrum function(html)/: CMakeLists.txt  main.cpp
Universal spectrum function(5 commands)/: CMakeLists.txt  Generator.cpp  Generator.h  main.cpp
Universal spectrum function(consol)/: CMakeLists.txt  main.cpp
bag of gold2/: Generation.cpp  Generation.hpp  Random number.cpp  main.cpp  obj.hpp
black and white1/: BlackAndWhite.html  Rnd.hpp  black and white1.cbp  black and white1.depend  black and white1.layout  loopSearch1.cpp  loopSearch1.hpp  main.cpp
calculator/: CMakeLists.txt  MathAction.cpp  MathAction.h  Number.cpp  Number.h  Operation.cpp  Operation.h  Trie.cpp  Trie.h  main.cpp
fib/: main.cpp
how much numbers/: Random numbers.depend  Rnd.cpp  (+11 more)
(+17 files in other folders)
