cmake_minimum_required(VERSION 3.15)
project(Universal_spectrum_function_consol_)

set(CMAKE_CXX_STANDARD 14)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake" )
add_executable(Universal_spectrum_function_consol_ main.cpp)
include(FindPkgConfig)
find_package(universalspectrum REQUIRED)
include_directories(${UNIVERSALSPECTRUM_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${UNIVERSALSPECTRUM_LIBRARY})